feat: Add user profile page with editing capabilities, password recovery, and registration functionality
- Implemented user profile page with editable fields for personal information.
- Added password recovery page with email submission functionality.
- Created registration page with form validation and user feedback.
- Developed a responsive navigation bar with authentication checks.
- Established authentication context for managing user state and session.
- Integrated API client for handling authentication requests.
- Styled authentication pages with a cohesive dark theme.